Added clustering to aggregation operators

--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "## Federated Averaging (`FedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of FedAvg (see [FedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/avgfed_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
+    "In this section, we detail the implementation of FedAvg (see [FedAVg](../shfl/federated_aggregator/fedavg_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
     "\n",
     "It is based on the arithmetic mean of the local weights $W_i$ trained in each of the local clients $C_i$. That is, the weights $W$ of the global model after each round of training are\n",
     "\n",
@@ -138,7 +138,7 @@
    "source": [
     "## Weighted Federated Averaging (`WeightedFedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of `WeightedFedAvg` (see [WeightedFedAVg](../shfl/federated_aggregator/weighted_avgfed_aggregator.py)). It is the weighted version of `FedAvg`. The weight of each client $C_i$ is determined by the amount of client's data $n_i$ with respect to total training data $n$. That is, the parameters $W$ of the global model after each round of training are \n",
+    "In this section, we detail the implementation of `WeightedFedAvg` (see [WeightedFedAVg](../shfl/federated_aggregator/weighted_fedavg_aggregator.py)). It is the weighted version of `FedAvg`. The weight of each client $C_i$ is determined by the amount of client's data $n_i$ with respect to total training data $n$. That is, the parameters $W$ of the global model after each round of training are \n",
     "\n",
     "$$W =  \\sum_{i=1}^n \\frac{n_i}{n} W_i$$\n",
     "\n",
@@ -209,11 +209,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cluster Federated Averaging (`ClusterFedAvg`) Operator\n",
+    "\n",
+    "In this section, we detail the implementation of `ClusterFedAvg` (see [ClusterFedAVg](../shfl/federated_aggregator/cluster_fedavg_aggregator.py)). \n",
+    "\n",
+    "It consists on the aggregation operator used for k-means clustering. When aggregating the centroids of a federated k-means clustering we face with the problem of grouping the clusters for subsequent aggregation. Based on the hypothesis that the closest centroids will belong to the same cluster, we apply K-Means over the centroides in order to group the centroids which belong to the same cluster and to obtain the representation (aggregation) of each group. We choose as the aggregation the new centroids obtained.\n",
+    "\n",
+    "For its implementation, we create a class that implements `FederatedAggregator` interface. The method `aggregate_weights` is overwritten applying K-Means to the clients' centroids."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from shfl.federated_aggregator.federated_aggregator import FederatedAggregator\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "\n",
+    "class ClusterFedAvgAggregator(FederatedAggregator):\n",
+    "    \"\"\"\n",
+    "    Implementation of Cluster Average Federated Aggregator.\n",
+    "    It adds another k-means to find the minimum distance of cluster centroids coming from each node.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def aggregate_weights(self, clients_params):\n",
+    "        clients_params_array = np.concatenate((clients_params))\n",
+    "\n",
+    "        n_clusters = clients_params[0].shape[0]\n",
+    "        model_aggregator = KMeans(n_clusters=n_clusters, init='k-means++')\n",
+    "        model_aggregator.fit(clients_params_array)\n",
+    "        aggregated_weights = np.array(model_aggregator.cluster_centers_)\n",
+    "        return aggregated_weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a federated government of clustering in order to apply this aggregation operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_database = shfl.data_base.Iris()\n",
+    "c_train_data, c_train_labels, c_test_data, c_test_labels = c_database.load_data()\n",
+    "\n",
+    "c_iid_distribution = shfl.data_distribution.IidDataDistribution(c_database)\n",
+    "c_federated_data, c_test_data, c_test_labels = c_iid_distribution.get_federated_data(num_nodes=3, percent=50)\n",
+    "\n",
+    "n_clusters = 3 # Set number of clusters\n",
+    "n_features = train_data.shape[1]\n",
+    "def clustering_model_builder():\n",
+    "    model = shfl.model.KMeansModel(n_clusters=n_clusters, n_features = n_features)\n",
+    "    return model\n",
+    "\n",
+    "clustering_aggregator = ClusterFedAvgAggregator()\n",
+    "\n",
+    "clustering_federated_government = shfl.federated_government.FederatedGovernment(clustering_model_builder, c_federated_data, clustering_aggregator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clustering_federated_government.run_rounds(1, c_test_data, c_test_labels)"
+   ]
   }
  ],
  "metadata": {
@@ -237,10 +309,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
