100% coverage fashion mnist label format noiid for numeric classification labels

--- a/notebooks/federated_clustering_k_means.ipynb
+++ b/notebooks/federated_clustering_k_means.ipynb
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.learning_approach.federated_government import FederatedGovernment\n",
+    "from shfl.federated_government.federated_government import FederatedGovernment\n",
     "\n",
     "n_clusters = 3 # Set number of clusters\n",
     "n_features = train_data.shape[1]\n",
@@ -344,9 +344,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (keras)",
    "language": "python",
-   "name": "python3"
+   "name": "keras"
   },
   "language_info": {
    "codemirror_mode": {
