Created Linear Regression Class notebook AND Custom model notebook
The Linear Regression Class notebook is created.
Moreover, another notebook is created where we show how to encapsulate a custom model in Sherpa.FL (I modified the old notebook on 2D linear regression with synthetic data).

--- a/notebooks/federated_models_logistic_regression.ipynb
+++ b/notebooks/federated_models_logistic_regression.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "We show how to set up a Federated classification experiment using a Logistic Regression model.\n",
     "Results from the Federated Learning are compared to the (non-federated) centralized learning.\n",
-    "Moreover, we also show how the addition of Differential Privacy affect the performance of the Federated model. \n",
+    "Moreover, we also show how the addition of Differential Privacy affects the performance of the Federated model. \n",
     "In the present examples, we will generate synthetic data for the classification task. \n",
     "In particular, we will start from a two-dimensional case, since with only two features we are able to easily plot the samples and the decision boundaries computed by the classifier. \n",
     "After that, we will repeat the experiment by adding more features and classes to the synthetic database.\n",
