--- a/notebooks/federated_clustering_k_means.ipynb
+++ b/notebooks/federated_clustering_k_means.ipynb
@@ -24,7 +24,7 @@
     "from shfl.data_base.iris import Iris\n",
     "\n",
     "\n",
-    "# Assign database:    \n",
+    "# Assign database:\n",
     "database = Iris()\n",
     "\n",
     "train_data, train_labels, test_data, test_labels = database.load_data()\n",
@@ -33,15 +33,19 @@
     "\n",
     "# Visualize train data: \n",
     "fig, ax = plt.subplots(1,2, figsize=(16,8))\n",
-    "ax[0].set_title('Sepal width data', fontsize=18)\n",
-    "ax[0].scatter(train_data[:, 0], train_data[:, 1], c=train_labels, s=30, cmap=\"tab20\")\n",
-    "ax[0].set_xlabel('x')\n",
-    "ax[0].set_ylabel('y')\n",
-    "ax[1].set_title('Petal width data', fontsize=18)\n",
-    "ax[1].scatter(train_data[:, 2], train_data[:, 3], c=train_labels, s=30, cmap=\"tab20\")\n",
-    "ax[1].set_xlabel('x')\n",
-    "ax[1].set_ylabel('y')\n",
     "fig.suptitle(\"Iris database\", fontsize=20)\n",
+    "ax[0].set_title('True labels', fontsize=18)\n",
+    "ax[0].scatter(train_data[:, 0], train_data[:, 1], c=train_labels, s=150, edgecolor='k', cmap=\"plasma\")\n",
+    "ax[0].set_xlabel('Sepal length', fontsize=18)\n",
+    "ax[0].set_ylabel('Sepal width', fontsize=18)\n",
+    "ax[0].tick_params(direction='in', length=10, width=5, colors='k', labelsize=20)\n",
+    "\n",
+    "ax[1].set_title('True labels', fontsize=18)\n",
+    "ax[1].scatter(train_data[:, 2], train_data[:, 3], c=train_labels, s=150, edgecolor='k', cmap=\"plasma\")\n",
+    "ax[1].set_xlabel('Petal length', fontsize=18)\n",
+    "ax[1].set_ylabel('Petal width', fontsize=18)\n",
+    "ax[1].tick_params(direction='in', length=10, width=5, colors='k', labelsize=20)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -64,17 +68,16 @@
     "    new_labels = km.predict(X)\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(16,8))\n",
     "    fig.suptitle(title, fontsize=20)\n",
-    "    axes[0].scatter(X[:, 0], X[:, 1], c=new_labels, cmap='plasma',\n",
-    "    edgecolor='k', s=150)\n",
-    "    axes[1].scatter(X[:, 2], X[:, 3], c=new_labels, cmap='plasma',\n",
-    "    edgecolor='k', s=150)\n",
+    "    axes[0].scatter(X[:, 0], X[:, 1], c=new_labels, cmap='plasma', edgecolor='k', s=150)\n",
     "    axes[0].set_xlabel('Sepal length', fontsize=18)\n",
     "    axes[0].set_ylabel('Sepal width', fontsize=18)\n",
+    "    axes[0].tick_params(direction='in', length=10, width=5, colors='k', labelsize=20)\n",
+    "    axes[0].set_title('Predicted', fontsize=18)\n",
+    "    \n",
+    "    axes[1].scatter(X[:, 2], X[:, 3], c=new_labels, cmap='plasma', edgecolor='k', s=150)\n",
     "    axes[1].set_xlabel('Petal length', fontsize=18)\n",
     "    axes[1].set_ylabel('Petal width', fontsize=18)\n",
-    "    axes[0].tick_params(direction='in', length=10, width=5, colors='k', labelsize=20)\n",
-    "    axes[1].tick_params(direction='in', length=10, width=5, colors='k', labelsize=20)\n",
-    "    axes[0].set_title('Predicted', fontsize=18)\n",
+    "    axes[1].tick_params(direction='in', length=10, width=5, colors='k', labelsize=20) \n",
     "    axes[1].set_title('Predicted', fontsize=18)\n",
     "    \n",
     "# Plot train data:\n",
@@ -137,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.learning_approach.federated_government import FederatedGovernment\n",
+    "from shfl.federated_government.federated_government import FederatedGovernment\n",
     "\n",
     "n_clusters = 3 # Set number of clusters\n",
     "n_features = train_data.shape[1]\n",
@@ -243,7 +246,7 @@
     "sampler = SensitivitySampler()\n",
     "# Reproducibility\n",
     "np.random.seed(789)\n",
-    "n_samples = 5000\n",
+    "n_samples = 50\n",
     "\n",
     "sensitivities = np.empty(n_features)\n",
     "\n",
@@ -303,27 +306,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.differential_privacy.composition_dp import AdaptiveDifferentialPrivacy\n",
-    "from shfl.differential_privacy.composition_dp import ExceededPrivacyBudgetError\n",
-    "\n",
-    "global_epsilon_delta=(3, 1)\n",
     "dpm = CustomAccess(sensitivity_array=sensitivities, epsilon_delta=(0.9, 0.9))\n",
-    "default_params_access = AdaptiveDifferentialPrivacy(global_epsilon_delta, differentially_private_mechanism=dpm)\n",
     "federated_government = FederatedGovernment(\n",
-    "    model_builder, federated_data, aggregator, model_params_access = default_params_access)\n",
+    "    model_builder, federated_data, aggregator, model_params_access = dpm)\n",
     "print(\"Test data size: \" + str(test_data.shape[0]))\n",
     "print(\"\\n\")\n",
-    "runs = 0\n",
-    "while True:\n",
-    "    try:\n",
-    "        federated_government.run_rounds(n = 1, test_data = test_data, test_label = test_label)\n",
-    "        runs += 1\n",
-    "    except ExceededPrivacyBudgetError:\n",
-    "        print(\"\\n{} rounds were run before completely spending the privacy budget \\n\".format(runs+1))\n",
-    "        break\n",
+    "federated_government.run_rounds(n = 1, test_data = test_data, test_label = test_label)\n",
     "\n",
     "# Reference Centralized (non federate) model:\n",
-    "print(\"Centralized differentially private model test performance : \" + str(centralized_model.evaluate(data=test_data, labels=test_labels)))\n",
+    "print(\"Centralized model test performance : \" + str(centralized_model.evaluate(data=test_data, labels=test_labels)))\n",
     "plot_k_means(centralized_model, test_data, title = \"Benchmark on Test data: K-means using CENTRALIZED data\")\n",
     "plot_k_means(federated_government.global_model, test_data, title = \"Benchmark on Test data: K-means using FL and DP\")"
    ]
