--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -122,7 +122,6 @@
     "\n",
     "        num_clients = clients_params_array.shape[0]\n",
     "        num_layers = clients_params_array.shape[1]\n",
-    "        clients_params_array = clients_params_array.reshape(num_clients, num_layers)\n",
     "\n",
     "        aggregated_weights = np.array([np.mean(clients_params_array[:, layer], axis=0) for layer in range(num_layers)])\n",
     "\n",
@@ -144,7 +143,7 @@
     "\n",
     "When all clients have the same amount of data it is equivalent to FedAvg.\n",
     "\n",
-    "For its implementation, we create a class that implements `FederatedAggregator` interface. The method `aggregate_weights` is overwritten calculating the weighted mean of the local parameters of each client. For that purpose, we first ponderate the local parameters by the percentage and, after that, we sum the ponderated parameters."
+    "For its implementation, we create a class that implements `FederatedAggregator` interface. The method `aggregate_weights` is overwritten calculating the weighted mean of the local parameters of each client. For that purpose, we first weight the local parameters by the percentage and, after that, we sum the weighted parameters."
    ]
   },
   {
@@ -173,7 +172,6 @@
     "\n",
     "        num_clients = clients_params_array.shape[0]\n",
     "        num_layers = clients_params_array.shape[1]\n",
-    "        clients_params_array = clients_params_array.reshape(num_clients, num_layers)\n",
     "\n",
     "        ponderated_weights = np.array([self._percentage[client] * clients_params_array[client, :] for client in range(num_clients)])\n",
     "        aggregated_weights = np.array([np.sum(ponderated_weights[:, layer], axis=0) for layer in range(num_layers)])\n",
@@ -216,7 +214,7 @@
     "\n",
     "In this section, we detail the implementation of `ClusterFedAvg` (see [ClusterFedAVg](../shfl/federated_aggregator/cluster_fedavg_aggregator.py)). \n",
     "\n",
-    "It consists on the aggregation operator used for k-means clustering. When aggregating the centroids of a federated k-means clustering we face with the problem of grouping the clusters for subsequent aggregation. Based on the hypothesis that the closest centroids will belong to the same cluster, we apply K-Means over the centroides in order to group the centroids which belong to the same cluster and to obtain the representation (aggregation) of each group. We choose as the aggregation the new centroids obtained.\n",
+    "It consists on the aggregation operator used for k-means clustering. When aggregating the centroids of a federated k-means clustering we face with the problem of grouping the clusters for subsequent aggregation. Based on the hypothesis that the closest centroids will belong to the same cluster, we apply K-Means over the centroids in order to group the centroids which belong to the same cluster and to obtain the representation (aggregation) of each group. We choose as the aggregation the new centroids obtained.\n",
     "\n",
     "For its implementation, we create a class that implements `FederatedAggregator` interface. The method `aggregate_weights` is overwritten applying K-Means to the clients' centroids."
    ]
