--- a/notebooks/federated_models_linear_regression.ipynb
+++ b/notebooks/federated_models_linear_regression.ipynb
@@ -29,6 +29,10 @@
     "from shfl.data_base.data_base import LabeledDatabase\n",
     "import sklearn.datasets\n",
     "import numpy as np\n",
+    "from shfl.private.reproducibility import Reproducibility\n",
+    "\n",
+    "# Comment to turn off reproducibility:\n",
+    "Reproducibility(1234)\n",
     "\n",
     "all_data = sklearn.datasets.fetch_california_housing()\n",
     "n_features = 2\n",
@@ -42,7 +46,6 @@
     "\n",
     "# Create database:\n",
     "database = LabeledDatabase(data[0:-size, ], labels[0:-size])\n",
-    "np.random.seed(123)     # Reproducibility \n",
     "train_data, train_labels, test_data, test_labels = database.load_data()"
    ]
   },
@@ -73,7 +76,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(132)     # Reproducibility\n",
     "iid_distribution = shfl.data_distribution.IidDataDistribution(database)\n",
     "federated_data, test_data, test_labels = iid_distribution.get_federated_data(num_nodes=5, percent=100)"
    ]
@@ -155,6 +157,7 @@
     "In the general case, the model's sensitivity might be difficult to compute analytically. \n",
     "An alternative approach is to attain *random* differential privacy through a sampling over the data (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562). \n",
     "That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
+    "However, be advised that this would guarantee the *weaker* property of *random* differential privacy.\n",
     "This approach is convenient since allows for the sensitivity estimation of an arbitrary model or a black-box computer function.\n",
     "The *Sherpa.FL* framework provides this functionality in the class `SensitivitySampler`.\n",
     "\n",
@@ -217,7 +220,6 @@
     "\n",
     "distribution = UniformDistribution(sample_data)\n",
     "sampler = SensitivitySampler()\n",
-    "np.random.seed(456)     # Reproducibility\n",
     "n_samples = 2500\n",
     "max_sensitivity, mean_sensitivity = sampler.sample_sensitivity(\n",
     "    LinearRegressionSample(n_features=n_features, n_targets=1), \n",
@@ -254,10 +256,9 @@
    "source": [
     "from shfl.differential_privacy import LaplaceMechanism\n",
     "\n",
-    "params_access_definition = LaplaceMechanism(sensitivity=mean_sensitivity, epsilon=0.5)\n",
+    "params_access_definition = LaplaceMechanism(sensitivity=max_sensitivity, epsilon=0.5)\n",
     "federated_governmentDP = shfl.federated_government.FederatedGovernment(\n",
     "    model_builder, federated_data, aggregator, model_params_access=params_access_definition)\n",
-    "np.random.seed(789)     # Reproducibility\n",
     "federated_governmentDP.run_rounds(n=1, test_data=test_data, test_label=test_labels)"
    ]
   },
@@ -276,9 +277,10 @@
    "metadata": {},
    "source": [
     "## Multiple queries: Composition of differential-private mechanisms using adaptivity\n",
-    "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.FL* (see also [Composition concepts notebook](./differential_privacy_composition_concepts.ipynb)).\n",
+    "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.FL* (see [Composition concepts notebook](./differential_privacy_composition_concepts.ipynb)).\n",
     "The idea is that we stop when the privacy budget is expended.\n",
-    "In this case this happens when the same query is executed on the clients' dataset, as this might disclose sensible information (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.5.2).\n",
+    "This happens when the same query is executed on the clients' dataset, as this might disclose sensible information (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.5.2).\n",
+    "Be advised that, in applying the advanced composition theorems in the present example, we are assuming that the *estimated* sensitivity is a good enough approximation of the analytic sensitivity (see [Rogers 2016](https://papers.nips.cc/paper/6170-privacy-odometers-and-filters-pay-as-you-go-composition.pdf)).\n",
     "\n",
     "In the below experiment, we fix a privacy budget (variable `global_epsilon_delta = (4, 0)`), and we consider different values of $\\epsilon$ for the query (variable `epsilon_range = np.array([0.2,0.5,0.8])`). \n",
     "In each case, the execution automatically exits when the privacy budget is expended. \n",
@@ -303,12 +305,11 @@
     "epsilon_range = np.array([0.2,0.5,0.8])\n",
     "gl_evaluationDP = np.zeros((epsilon_range.size, 2))\n",
     "\n",
-    "np.random.seed(1234)\n",
     "for i_epsilon in range(epsilon_range.size):\n",
     "    print(\"---------------------------\\n\")\n",
     "    print(\"epsilon = \" + str(epsilon_range[i_epsilon]))\n",
     "    \n",
-    "    dpm = LaplaceMechanism(sensitivity=mean_sensitivity, epsilon=epsilon_range[i_epsilon])\n",
+    "    dpm = LaplaceMechanism(sensitivity=max_sensitivity, epsilon=epsilon_range[i_epsilon])\n",
     "    \n",
     "    params_access_definition = AdaptiveDifferentialPrivacy(global_epsilon_delta, differentially_private_mechanism=dpm)\n",
     "    federated_governmentDP = shfl.federated_government.FederatedGovernment(\n",
@@ -330,7 +331,7 @@
     "            gl_evaluationDP[i_epsilon,:] = np.divide(gl_evaluationDP[i_epsilon,:], i_run)\n",
     "            break \n",
     "        \n",
-    "print(\"Mean performance: \" + str(gl_evaluationDP))"
+    "print(\"Mean performance: \\n\" + str(gl_evaluationDP))"
    ]
   },
   {
