--- a/notebooks/federated_models_logistic_regression.ipynb
+++ b/notebooks/federated_models_logistic_regression.ipynb
@@ -27,6 +27,10 @@
     "from shfl.data_base.data_base import LabeledDatabase\n",
     "from sklearn.datasets import make_classification\n",
     "import numpy as np\n",
+    "from shfl.private.reproducibility import Reproducibility\n",
+    "\n",
+    "# Comment to turn off reproducibility:\n",
+    "Reproducibility(1234)\n",
     "\n",
     "# Create database:\n",
     "n_features = 2\n",
@@ -172,8 +176,10 @@
     "The noise added has to be of the order of the sensitivity of the model's output, i.e. the model parameters of our logistic regression. \n",
     "In general, the sensitivity of a Machine Learning model is difficult to compute (for the Logistic Regression case, refer to [Privacy-preserving logistic regression](http://papers.nips.cc/paper/3486-privacy-preserving-logistic-regression.pdf)). \n",
     "An alternative strategy may be to estimate the sensitivity through a *sampling* procedure (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562) and how to use the tools provided by Sherpa.FL in the [Linear Regression Notebook](./federated_models_linear_regression.ipynb)). \n",
+    "However, be advised that this would guarantee the *weaker* property of *random* differential privacy.\n",
     "This approach is convenient since allows for the sensitivity estimation of an arbitrary model or a black-box computer function.\n",
     "The *Sherpa.FL* framework provides this functionality in the class `SensitivitySampler`.\n",
+    "\n",
     "\n",
     "We need to specify a distribution of the data to sample from, and this in general requires previous knowledge and/or model assumptions. \n",
     "In order not make any specific assumption on the distribution of the dataset, we can choose a *uniform* distribution. \n",
@@ -254,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, we decide to use the mean sensitivity, fix the $\\epsilon$ privacy budget and we can run the privacy-preserving Federated experiment:"
+    "Once obtained the model's estimated sensitivity, we fix the $\\epsilon$ privacy budget and we can run the privacy-preserving Federated experiment:"
    ]
   },
   {
@@ -265,7 +271,7 @@
    "source": [
     "from shfl.differential_privacy import LaplaceMechanism\n",
     "\n",
-    "params_access_definition = LaplaceMechanism(sensitivity=mean_sensitivity, epsilon=1)\n",
+    "params_access_definition = LaplaceMechanism(sensitivity=max_sensitivity, epsilon=0.5)\n",
     "federated_governmentDP = shfl.federated_government.FederatedGovernment(\n",
     "    model_builder, federated_data, aggregator, model_params_access=params_access_definition)\n",
     "\n",
@@ -299,7 +305,7 @@
     "**Remark 2:** It is worth mentioning that the above results cannot be considered as general. Some factors that considerably influence the classification problem are, for example, the training dataset, the model type, and the Differential Privacy mechanism used. \n",
     "In fact, the classification problem itself depends on the training data (number of features, whether the classes are separable or not etc.). \n",
     "We strongly encourage the user to play with the values for generating the database (`n_features, n_classes, n_samples, class_sep ...` see [their meaning](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_classification.html#sklearn.datasets.make_classification)), or try different classification datasets, since convergence and accuracy of local and global models can be strongly affected. \n",
-    "Moreover, even without changing the dataset, by running the present experiment multiple times, it is observed that the *Federated Global model* may also exhibit slightly *better performance* when compared to the centralized model (we use `random_state` input for producing always the same dataset). \n",
+    "Moreover, even without changing the dataset, by running the present experiment multiple times (you need to comment the *Reproducibility* command), it is observed that the *Federated Global model* may also exhibit slightly *better performance* when compared to the centralized model (we use `random_state` input for producing always the same dataset). \n",
     "Similarly, the privacy-preserving Federate model might exhibit even better performance compared to the non-private version. \n",
     "This depends on a) the performance metrics chosen and b) the idiosyncrasy of the specific classification considered here: a small modification to the model's coefficients may alter the class prediction for a few samples.  "
    ]
@@ -319,7 +325,7 @@
    "outputs": [],
    "source": [
     "# Create database:\n",
-    "n_features = 10\n",
+    "n_features = 11\n",
     "n_classes = 5\n",
     "n_samples = 500\n",
     "data, labels = make_classification(\n",
@@ -396,7 +402,7 @@
    "outputs": [],
    "source": [
     "# Create sampling database:\n",
-    "n_samples = 150\n",
+    "n_samples = 500\n",
     "sampling_data, sampling_labels = make_classification(\n",
     "    n_samples=n_samples, n_features=n_features, n_informative=4, \n",
     "    n_redundant=0, n_repeated=0, n_classes=n_classes, \n",
@@ -405,7 +411,7 @@
     "distribution = UniformDistribution(sample_data)\n",
     "\n",
     "# Sample sensitivity:\n",
-    "n_samples = 200\n",
+    "n_samples = 300\n",
     "max_sensitivity, mean_sensitivity = sampler.sample_sensitivity(\n",
     "    LogisticRegressionSample(n_features=n_features, classes=classes), \n",
     "    L1SensitivityNorm(), distribution, n=n_samples, gamma=0.05)\n",
@@ -421,7 +427,7 @@
    "source": [
     "from shfl.differential_privacy import LaplaceMechanism\n",
     "\n",
-    "params_access_definition = LaplaceMechanism(sensitivity=mean_sensitivity, epsilon=1)\n",
+    "params_access_definition = LaplaceMechanism(sensitivity=max_sensitivity, epsilon=0.5)\n",
     "federated_governmentDP = shfl.federated_government.FederatedGovernment(\n",
     "    model_builder, federated_data, aggregator, model_params_access=params_access_definition)\n",
     "\n",
