Updated notebook Linear Regression Class

--- a/notebooks/federated_models_linear_regression.ipynb
+++ b/notebooks/federated_models_linear_regression.ipynb
@@ -41,8 +41,8 @@
     "\n",
     "# Retain part for DP sensitivity sampling:\n",
     "size = 2000\n",
-    "sampling_data = data[:-size, ]\n",
-    "sampling_labels = labels[:-size, ]\n",
+    "sampling_data = data[-size:, ]\n",
+    "sampling_labels = labels[-size:, ]\n",
     "\n",
     "# Create database:\n",
     "database = LabeledDatabase(data[0:-size, ], labels[0:-size])\n",
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "iid_distribution = shfl.data_distribution.IidDataDistribution(database)\n",
-    "federated_data, test_data, test_labels = iid_distribution.get_federated_data(num_nodes=5, percent=100)"
+    "federated_data, test_data, test_labels = iid_distribution.get_federated_data(num_nodes=5)"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "\n",
     "distribution = UniformDistribution(sample_data)\n",
     "sampler = SensitivitySampler()\n",
-    "n_samples = 2500\n",
+    "n_samples = 4000\n",
     "max_sensitivity, mean_sensitivity = sampler.sample_sensitivity(\n",
     "    LinearRegressionSample(n_features=n_features, n_targets=1), \n",
     "    L1SensitivityNorm(), distribution, n=n_samples, gamma=0.05)\n",
@@ -242,7 +242,7 @@
    "source": [
     "**Running the model in a Federated configuration with Differential Privacy.**\n",
     "At this stage we are ready to add a layer of DP to our federated learning model. \n",
-    "We will apply the Laplace mechanism, assuming the sensitivity of our model is the mean obtained from the previous sampling, namely $\\Delta f \\approx 0.001$. \n",
+    "We will apply the Laplace mechanism, employing the sensitivity obtained from the previous sampling. \n",
     "The Laplace mechanism provided by the *Sherpa.FL* Framework is then assigned as the *private* access type to the model's parameters of each client in a new `FederatedGovernment` object. \n",
     "This results into an $\\epsilon$-*differentially private FL model*.\n",
     "For example, picking the value $\\epsilon = 0.5$, we can run the FL experiment with DP:"
@@ -280,7 +280,7 @@
     "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.FL* (see [Composition concepts notebook](./differential_privacy_composition_concepts.ipynb)).\n",
     "The idea is that we stop when the privacy budget is expended.\n",
     "This happens when the same query is executed on the clients' dataset, as this might disclose sensible information (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.5.2).\n",
-    "Be advised that, in applying the advanced composition theorems in the present example, we are assuming that the *estimated* sensitivity is a good enough approximation of the analytic sensitivity (see [Rogers 2016](https://papers.nips.cc/paper/6170-privacy-odometers-and-filters-pay-as-you-go-composition.pdf)).\n",
+    "Note that, when applying the composition theorems for privacy filters in the present example, we are assuming that the *estimated* sensitivity is a good enough approximation of the analytic sensitivity (see [Rogers 2016](https://papers.nips.cc/paper/6170-privacy-odometers-and-filters-pay-as-you-go-composition.pdf)).\n",
     "\n",
     "In the below experiment, we fix a privacy budget (variable `global_epsilon_delta = (4, 0)`), and we consider different values of $\\epsilon$ for the query (variable `epsilon_range = np.array([0.2,0.5,0.8])`). \n",
     "In each case, the execution automatically exits when the privacy budget is expended. \n",
