Fix: Naming conventions

--- a/notebooks/basic_concepts_random_seed.ipynb
+++ b/notebooks/basic_concepts_random_seed.ipynb
@@ -23,7 +23,7 @@
     "Reproducibility(1234)\n",
     "\n",
     "# In case of client\n",
-    "# Reproducibility.getInstance().set_seed(ID)"
+    "# Reproducibility.get_instance().set_seed(ID)"
    ]
   },
   {
