renamed, moved and reviewed notebooks

--- a/notebooks/federated_learning/federated_learning_attack_simulation_poisoning_data.ipynb
+++ b/notebooks/federated_learning/federated_learning_attack_simulation_poisoning_data.ipynb
@@ -14,7 +14,7 @@
     "which consists of shuffling the training labels of some number of clients which become adversarial ones.\n",
     "\n",
     "The aim of this notebook is to present the class `FederatedDataAttack` implemented in [federated_attack.py](../shfl/private/federated_attack.py) whose goal is to implement any attack on the federated data. \n",
-    "For more information about basic federated learning concepts refer to the [Basic Concepts Notebook](./basic_concepts.ipynb).\n",
+    "For more information about basic federated learning concepts refer to the [Basic Concepts Notebook](./federated_learning_basic_concepts.ipynb).\n",
     "\n",
     "For the simulation we use [Emnist](https://www.nist.gov/itl/products-and-services/emnist-dataset) Digits dataset."
    ]
@@ -181,8 +181,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, we can train a FL model among these clients (adversarial and regular ones) using a specific aggregation operator. For more information please visit [Basic Concepts Notebook](./basic_concepts.ipynb)."
+    "At this point, we can train a FL model among these clients (adversarial and regular ones) using a specific aggregation operator. For more information please visit [Basic Concepts Notebook](./federated_learning_basic_concepts.ipynb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -201,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
