--- a/notebooks/federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Federated learning: Aggregation operators\n",
     "\n",
-    "In this notebook we provide an explanation of the implementation of the different federated aggregation operators provided in the platform. Before discussing the different aggregation operators, we establish the federated configuration (for more information see [Basic Concepts Notebook](./basic_concepts.ipynb))."
+    "In this notebook we provide an explanation of the implementation of the different federated aggregation operators provided in the platform. Before discussing the different aggregation operators, we establish the federated configuration (for more information see [Basic Concepts Notebook](./federated_learning_basic_concepts.ipynb))."
    ]
   },
   {
@@ -302,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
