--- a/notebooks/federated_models/federated_models_custom_model.ipynb
+++ b/notebooks/federated_models/federated_models_custom_model.ipynb
@@ -10,7 +10,7 @@
     "In this case, we will create a learning model from scratch and show how to make it interact with the *Sherpa.FL* framework. \n",
     "For simplicity, a two-features case of linear regression is considered, since explicit formula for the minimization of the object function is available (see [Introduction to statistical learning](http://faculty.marshall.usc.edu/gareth-james/ISL/) Section 3.1).\n",
     "For completeness, we assess the *accuracy* in a federated learning context, and we address the *privacy level needed* in terms of sampling the sensitivity of our model for application of Differential Privacy. \n",
-    "For a more extensive use of differential privacy with Federated Learning, see also notebooks on [Linear Regression](/.federated_models_linear_regression.ipynb) and [K-means clustering](./federated_models_k_means.ipynb).\n",
+    "For a more extensive use of differential privacy with Federated Learning, see also notebooks on [Linear Regression](./federated_models_linear_regression.ipynb) and [K-means clustering](./federated_models_clustering_k_means.ipynb).\n",
     "Also, see the notebook on [Regression using Keras](./federated_models_regression_deeplearning.ipynb), where a neural network model is used to perform regression. \n",
     "\n",
     "## Model definition\n",
@@ -198,10 +198,10 @@
    "metadata": {},
    "source": [
     "**Adding Differential Privacy: sampling model's sensitivity.** \n",
-    "In the case of applying the Laplace privacy mechanism (see also [Laplace mechanism notebook](./differential_privacy_laplace.ipynb)), the noise added has to be of the order of the sensitivity of the model's output (the values of the intercept and slope in our 2D linear regression). \n",
+    "In the case of applying the Laplace privacy mechanism (see also [Laplace mechanism notebook](../differential_privacy/differential_privacy_laplace.ipynb)), the noise added has to be of the order of the sensitivity of the model's output (the values of the intercept and slope in our 2D linear regression). \n",
     "In the general case, model's sensitivity might be difficult to compute analytically. \n",
     "An alternative approach is to attain *random* differential privacy through a sampling over the data (see [Rubinstein 2017](https://arxiv.org/pdf/1706.02562.pdf)). That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
-    "The framework provides a method to sample the sensitivity (see the implementation [here](../shfl/differential_privacy/sensitivity_sampler.py)).\n",
+    "The framework provides a method to sample the sensitivity (see the implementation [here](../../shfl/differential_privacy/sensitivity_sampler.py)).\n",
     "\n",
     "In order to carry out this approach, we need to specify a distribution of the data to sample from. \n",
     "This in general requires previous knowledge and/or model assumptions. \n",
@@ -338,9 +338,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -352,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
