--- a/notebooks/federated_models/federated_models_linear_regression.ipynb
+++ b/notebooks/federated_models/federated_models_linear_regression.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "**Differential Privacy: sampling the model's sensitivity.**\n",
     "We want to assess the impact of Differential Privacy (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.3) on the Federated model's performance.\n",
-    "In the case of applying the Laplace privacy mechanism (see [Laplace mechanism notebook](./differential_privacy_laplace.ipynb)), the noise added has to be of the order of the sensitivity of the model's output, i.e. the model parameters of our linear regression. \n",
+    "In the case of applying the Laplace privacy mechanism (see [Laplace mechanism notebook](../differential_privacy/differential_privacy_laplace.ipynb)), the noise added has to be of the order of the sensitivity of the model's output, i.e. the model parameters of our linear regression. \n",
     "In the general case, the model's sensitivity might be difficult to compute analytically. \n",
     "An alternative approach is to attain *random* differential privacy through a sampling over the data (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562). \n",
     "That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
@@ -277,7 +277,7 @@
    "metadata": {},
    "source": [
     "## Multiple queries: Composition of differential-private mechanisms using adaptivity\n",
-    "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.FL* (see [Composition concepts notebook](./differential_privacy_composition_concepts.ipynb)).\n",
+    "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.FL* (see [Composition concepts notebook](../differential_privacy/differential_privacy_composition_concepts.ipynb)).\n",
     "The idea is that we stop when the privacy budget is expended.\n",
     "This happens when the same query is executed on the clients' dataset, as this might disclose sensible information (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.5.2).\n",
     "Note that, when applying the composition theorems for privacy filters in the present example, we are assuming that the *estimated* sensitivity is a good enough approximation of the analytic sensitivity (see [Rogers 2016](https://papers.nips.cc/paper/6170-privacy-odometers-and-filters-pay-as-you-go-composition.pdf)).\n",
@@ -345,9 +345,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
