--- a/notebooks/federated_models/federated_models_regression_deeplearning.ipynb
+++ b/notebooks/federated_models/federated_models_regression_deeplearning.ipynb
@@ -7,7 +7,7 @@
     "# Federated learning: regression using the California Housing database\n",
     "\n",
     "In this notebook we are going to show how you can use a federated learning environment to create a regression model. \n",
-    "In the notebook on the [Linear regression for a 2D simple case](./federated_models_regression_linear.ipynb) we explained the basic concepts of the framework, so now we will go slightly faster.\n",
+    "In the notebook on the [Linear regression for a 2D simple case](./federated_models_linear_regression.ipynb) we explained the basic concepts of the framework, so now we will go slightly faster.\n",
     "\n",
     "First of all, we load a dataset (included in the framework) to allow for regression experiments."
    ]
@@ -157,9 +157,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (keras)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "keras"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
