--- a/notebooks/federated_learning/federated_learning_basic_concepts.ipynb
+++ b/notebooks/federated_learning/federated_learning_basic_concepts.ipynb
@@ -78,7 +78,7 @@
     "The assumption in this example will be the data is distributed as a set of independent and identically distributed random variables, having every node approximately the same amount of data. \n",
     "There are a set of different possibilities in order to distribute the data. \n",
     "The distribution of the data is one of the factor that could impact more to a federated algorithm. Therefore, the framework contains the implementation of some of the most common distribution that allow you experiment different situations easily. \n",
-    "In this  [Federated Sampling](./federated_sampling.ipynb) you can dig into the options that the framework provides at the moment."
+    "In this  [Federated Sampling](./federated_learning_sampling.ipynb) you can dig into the options that the framework provides at the moment."
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, private data in a node is not accesible directly but the framework provides mechanisms to use this data in a machine learning model. A federated learning algorithm is defined by a machine learning model locally deployed in each node that learns from the respective node’s private data and an aggregating mechanism to aggregate the different model parameters uploaded by the client nodes to a central node. In this example we will use a deep learning model using keras to build it. The framework provides classes to allow using Tensorflow (see [Basic Concepts Tensorflow](./basic_concepts_tensorflow.ipynb)) and Keras models into a federated learning scenario, your job is only to create a function acting as model builder. Moreover, the framework provides classes to allow using pretrained Tensorflow and Keras models (see [Basic Concepts Pretrained Models](./basic_concepts_pretrained_model.ipynb)). In this example build a Keras learning model.  "
+    "As we can see, private data in a node is not accesible directly but the framework provides mechanisms to use this data in a machine learning model. A federated learning algorithm is defined by a machine learning model locally deployed in each node that learns from the respective node’s private data and an aggregating mechanism to aggregate the different model parameters uploaded by the client nodes to a central node. In this example we will use a deep learning model using keras to build it. The framework provides classes to allow using Tensorflow (see [Basic Concepts Tensorflow](./federated_learning_basic_concepts_tensorflow.ipynb)) and Keras models into a federated learning scenario, your job is only to create a function acting as model builder. Moreover, the framework provides classes to allow using pretrained Tensorflow and Keras models (see [Basic Concepts Pretrained Models](./federated_learning_basic_concepts_pretrained_model.ipynb)). In this example build a Keras learning model.  "
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to see all the aggregation operators you can check the following notebook [Federated Aggregation Operators](./basic_concepts_aggregation_operators.ipynb). Before running the algorithm, we want to apply a transformation to the data. A good practice is to define a federated operation that will ensure that the transformation is applied to the federated data in all the client nodes. We want to reshape the data, so we define the following FederatedTransformation."
+    "If you want to see all the aggregation operators you can check the following notebook [Federated Aggregation Operators](./federated_learning_basic_concepts_aggregation_operators.ipynb). Before running the algorithm, we want to apply a transformation to the data. A good practice is to define a federated operation that will ensure that the transformation is applied to the federated data in all the client nodes. We want to reshape the data, so we define the following FederatedTransformation."
    ]
   },
   {
@@ -271,9 +271,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (keras)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "keras"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
