--- a/notebooks/federated_models/federated_models_logistic_regression.ipynb
+++ b/notebooks/federated_models/federated_models_logistic_regression.ipynb
@@ -172,10 +172,10 @@
    "source": [
     "**Adding Differential Privacy to the Federated model.** \n",
     "We want to assess the impact of Differential Privacy (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.3) on the Federated model's performance. \n",
-    "In particular, we will use the Laplace mechanism (see also the corresponding [Laplace mechanism notebook](./differential_privacy_laplace.ipynb)). \n",
+    "In particular, we will use the Laplace mechanism (see also the corresponding [Laplace mechanism notebook](../differential_privacy/differential_privacy_laplace.ipynb)). \n",
     "The noise added has to be of the order of the sensitivity of the model's output, i.e. the model parameters of our logistic regression. \n",
     "In general, the sensitivity of a Machine Learning model is difficult to compute (for the Logistic Regression case, refer to [Privacy-preserving logistic regression](http://papers.nips.cc/paper/3486-privacy-preserving-logistic-regression.pdf)). \n",
-    "An alternative strategy may be to estimate the sensitivity through a *sampling* procedure (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562) and how to use the tools provided by Sherpa.FL in the [Linear Regression Notebook](./federated_models_linear_regression.ipynb)). \n",
+    "An alternative strategy may be to estimate the sensitivity through a *sampling* procedure (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562) and how to use the tools provided by Sherpa.FL in the [Linear Regression Notebook](../federated_models/federated_models_linear_regression.ipynb)). \n",
     "However, be advised that this would guarantee the *weaker* property of *random* differential privacy.\n",
     "This approach is convenient since allows for the sensitivity estimation of an arbitrary model or a black-box computer function.\n",
     "The *Sherpa.FL* framework provides this functionality in the class `SensitivitySampler`.\n",
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Remark 1:** In this case we only run a few Federated rounds. However, in general one should make sure not to exceed a fixed privacy budget (see how to achieve that  in *Sherpa.FL* in the [Composition concepts notebook](./differential_privacy_composition_concepts.ipynb)).   \n",
+    "**Remark 1:** In this case we only run a few Federated rounds. However, in general one should make sure not to exceed a fixed privacy budget (see how to achieve that  in *Sherpa.FL* in the [Composition concepts notebook](../differential_privacy/differential_privacy_composition_concepts.ipynb)).   \n",
     "**Remark 2:** It is worth mentioning that the above results cannot be considered as general. Some factors that considerably influence the classification problem are, for example, the training dataset, the model type, and the Differential Privacy mechanism used. \n",
     "In fact, the classification problem itself depends on the training data (number of features, whether the classes are separable or not etc.). \n",
     "We strongly encourage the user to play with the values for generating the database (`n_features, n_classes, n_samples, class_sep ...` see [their meaning](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_classification.html#sklearn.datasets.make_classification)), or try different classification datasets, since convergence and accuracy of local and global models can be strongly affected. \n",
@@ -437,9 +437,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -451,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
