--- a/notebooks/federated_models/high_level_federated_image_classification.ipynb
+++ b/notebooks/federated_models/high_level_federated_image_classification.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Federated learning: High level functionality\n",
     "\n",
-    "In this notebook we show the high-level functionality of the framework. It implements some predefined FL scenarios to make it as easy as possible to use. Clearly, in this predefined simulation there are some parameters prefixed (e.g. the aggregation operator or the learning model). If you prefer to set up your own simulation scenario, please see [Basic Concepts Notebook](./basic_concepts.ipynb) where you will find more detailed information.\n",
+    "In this notebook we show the high-level functionality of the framework. It implements some predefined FL scenarios to make it as easy as possible to use. Clearly, in this predefined simulation there are some parameters prefixed (e.g. the aggregation operator or the learning model). If you prefer to set up your own simulation scenario, please see [Basic Concepts Notebook](../federated_learning/federated_learning_basic_concepts.ipynb) where you will find more detailed information.\n",
     "\n",
     "Specifically, we present the high-level funcion as follows:\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "The rest of the function params correspond to some changable params:\n",
     "\n",
-    "- *iid*: you can change between I.I.D (by default *iid=\"True\"*) or non-I.I.D (*iid=\"False\"*) data distributions. In both scenarios, data splitting between clients will be equitable (non weighted) and without replacement (for more information see [Federated Sampling](./federated_sampling.ipynb)).\n",
+    "- *iid*: you can change between I.I.D (by default *iid=\"True\"*) or non-I.I.D (*iid=\"False\"*) data distributions. In both scenarios, data splitting between clients will be equitable (non weighted) and without replacement (for more information see [Federated Sampling](../federated_learning/federated_learning_sampling.ipynb)).\n",
     "- *num_nodes*: you can choose the number of clients for the simulation by changing the *num_nodes* parameter (by default 20).\n",
     "- *percent*: you decide the percentage of the database that you want to split across the clients by changing the *percent* parameter (by default 100, $percent\\in [0,100]$).\n",
     "\n",
@@ -31,9 +31,9 @@
     "- EMNIST: for the [Emnist](https://www.nist.gov/itl/products-and-services/emnist-dataset) Digits dataset. \n",
     "- FASHION_EMNIST: for the [Fashion EMNIST](https://github.com/zalandoresearch/fashion-mnist) database.\n",
     "\n",
-    "In addition, as FL model we use a CNN-based neural network architecture based on two CNN layers and FedAvg as aggregation operator (see [Federated Aggregation Operators](./basic_concepts_aggregation_operators.ipynb)).\n",
+    "In addition, as FL model we use a CNN-based neural network architecture based on two CNN layers and FedAvg as aggregation operator (see [Federated Aggregation Operators](../federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb)).\n",
     "\n",
-    "For more information about how to change some parameters or implementation details visit [federated_images_classifier.py](../shfl/federated_government/federated_images_classifier.py)."
+    "For more information about how to change some parameters or implementation details visit [federated_images_classifier.py](../../shfl/federated_government/federated_images_classifier.py)."
    ]
   },
   {
@@ -62,9 +62,9 @@
     "\n",
     "- IRIS: for the [Iris](https://archive.ics.uci.edu/ml/datasets/iris) dataset. \n",
     "\n",
-    "In addition, as FL model we use [KMeans](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) from scikit-learn with the same number of clustering in each client and ClusterFedAvg as aggregation operator (see [Federated Aggregation Operators](./basic_concepts_aggregation_operators.ipynb)).\n",
+    "In addition, as FL model we use [KMeans](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) from scikit-learn with the same number of clustering in each client and ClusterFedAvg as aggregation operator (see [Federated Aggregation Operators](../federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb)).\n",
     "\n",
-    "For more information about how to change some parameters or implementation details visit [federated_clustering.py](../shfl/federated_government/federated_clustering.py)."
+    "For more information about how to change some parameters or implementation details visit [federated_clustering.py](../../shfl/federated_government/federated_clustering.py)."
    ]
   },
   {
@@ -87,9 +87,9 @@
     "\n",
     "- CALIFORNIA: for the [California Housing](https://www.kaggle.com/paraggurjar/california-house-price-simple-linear-regression) dataset. \n",
     "\n",
-    "In addition, as FL model we use [LinearRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html) from scikit-learn with the same number of clustering in each client and FedAvg as aggregation operator (see [Federated Aggregation Operators](./basic_concepts_aggregation_operators.ipynb)).\n",
+    "In addition, as FL model we use [LinearRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html) from scikit-learn with the same number of clustering in each client and FedAvg as aggregation operator (see [Federated Aggregation Operators](../federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb)).\n",
     "\n",
-    "For more information about how to change some parameters or implementation details visit [federated_linear_regression.py](../shfl/federated_government/federated_linear_regression.py)."
+    "For more information about how to change some parameters or implementation details visit [federated_linear_regression.py](../../shfl/federated_government/federated_linear_regression.py)."
    ]
   },
   {
@@ -119,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
