fix small problem in notebooks

--- a/notebooks/differential_privacy/differential_privacy_composition_concepts.ipynb
+++ b/notebooks/differential_privacy/differential_privacy_composition_concepts.ipynb
@@ -58,8 +58,8 @@
     "        db_storage.configure_data_access(db1, M[i])\n",
     "        db_storage.configure_data_access(db2, M[i])\n",
     "        # The outputs are stored in the adversary's view in each experiment\n",
-    "        A_view1[i] = db_storage.query(db1)[0]\n",
-    "        A_view2[i] = db_storage.query(db2)[0]\n",
+    "        A_view1[i] = db_storage.query(db1)\n",
+    "        A_view2[i] = db_storage.query(db2)\n",
     "    \n",
     "    return A_view1, A_view2\n"
    ]
